force-app/main/default/objects/Deal__c/fields/Basement_Completion_Amount__c.field-meta.xml
<CustomField>
    <fullName>Basement_Completion_Amount__c</fullName>
    <label>Basement Completion Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>