force-app/main/default/objects/Deal__c/fields/Broker_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Broker_Payment_Type__c</fullName>
    <label>Broker Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>