force-app/main/default/objects/Deal__c/fields/Broker_Payment_Value__c.field-meta.xml
<CustomField>
    <fullName>Broker_Payment_Value__c</fullName>
    <label>Broker Payment Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>