force-app/main/default/objects/Deal__c/fields/Broket_Payment_Median__c.field-meta.xml
<CustomField>
    <fullName>Broket_Payment_Median__c</fullName>
    <label>Broket Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage of Total</fullName>
            </value>
            <value>
                <fullName>Discussed Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>