force-app/main/default/objects/Deal__c/fields/Conga_Link__c.field-meta.xml
<CustomField>
    <fullName>Conga_Link__c</fullName>
    <formula>&apos;https://www.appextremes.com/apps/Conga/PM.aspx&apos;&amp;
&apos;?SessionId=SESSION_ID&apos; &amp;
&apos;&amp;ServerUrl=&apos;&amp; $Api.Partner_Server_URL_290 &amp;
&apos;&amp;Id=&apos;&amp;Id &amp;
&apos;&amp;TemplateId=a5DN0000000EaEO&apos; &amp;
&apos;&amp;QueryId=[Accounts]a55N0000000O07Q&amp;DS7=1&apos; &amp;
&apos;&amp;LRTF=1&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Link</label>
    <type>Text</type>
</CustomField>