force-app/main/default/objects/Deal__c/fields/Construction_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Construction_Agreement__c</fullName>
    <label>Construction Agreement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>