force-app/main/default/objects/Deal__c/fields/Corpus_Maintanance__c.field-meta.xml
<CustomField>
    <fullName>Corpus_Maintanance__c</fullName>
    <label>Corpus &amp; Maintanance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>