force-app/main/default/objects/Deal__c/fields/Date_Of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Booking__c</fullName>
    <label>Date Of Booking</label>
    <type>Date</type>
</CustomField>