force-app/main/default/objects/Deal__c/fields/Deal_Transfer_Approved__c.field-meta.xml
<CustomField>
    <fullName>Deal_Transfer_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Transfer Approved</label>
    <type>Checkbox</type>
</CustomField>