force-app/main/default/objects/Deal__c/fields/Doc_No__c.field-meta.xml
<CustomField>
    <fullName>Doc_No__c</fullName>
    <label>Doc No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>