force-app/main/default/objects/Deal__c/fields/ELECTRICAL_CHARGES__c.field-meta.xml
<CustomField>
    <fullName>ELECTRICAL_CHARGES__c</fullName>
    <label>ELECTRICAL CHARGES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>