force-app/main/default/objects/Deal__c/fields/Opted_For_Parking__c.field-meta.xml
<CustomField>
    <fullName>Opted_For_Parking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted For Parking</label>
    <type>Checkbox</type>
</CustomField>