force-app/main/default/objects/Deal__c/fields/Parking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Parking_Amount__c</fullName>
    <label>Parking Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>