force-app/main/default/objects/Deal__c/fields/Sales_Deed__c.field-meta.xml
<CustomField>
    <fullName>Sales_Deed__c</fullName>
    <label>Sales Deed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>