force-app/main/default/objects/Deal__c/fields/X30_Days_From_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>X30_Days_From_Booking_Amount__c</fullName>
    <label>30 Days From Booking Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>